--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OutMe | Course Outline Due Date Retriever</title>
+    <title>Save the Date | Course Outline Due Date Retriever</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
@@ -18,7 +18,10 @@
       </ul>
     </header>
     <section>
-      <img src="Images/4136084.jpg" alt="BoyRunning" />
+      <!--<img src="Images/4136084.jpg" alt="BoyRunning" /> -->
+      <img src="Images/Clouds.png" id="clouds" />
+      <img src="Images/NoTree.png" id="NoTree" />
+      <img src="Images/Tree.png" id="Tree" />
     </section>
   </body>
 </html>
