--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Save the Date | Course Outline Due Date Retriever</title>
+    <title>Save The Date | Course Outline Due Date Retriever</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
@@ -19,9 +19,48 @@
     </header>
     <section>
       <!--<img src="Images/4136084.jpg" alt="BoyRunning" /> -->
-      <img src="Images/Clouds.png" id="clouds" />
-      <img src="Images/NoTree.png" id="NoTree" />
+      <img src="Images/NoTreeorBush.png" id="NoTreeorBush" />
       <img src="Images/Tree.png" id="Tree" />
+      <!-- add the name of the id of the dropbox in front of the hashtag, so that the button works-->
+      <img src="Images/Bush.png" id="bush" />
+      <img src="Images/cloudtrial6.png" id="clouds" />
+      <img src="Images/ground.png" alt="ground" />
+      <h2 id="text">Save the Date</h2>
+      <a href="#" id="btn"> Upload PDF</a>
     </section>
+    <div class="sec">
+      <h2>Save The Date</h2>
+      <h4>Course Outline Due Date Retriever</h4>
+      <p>
+        There are two types of people at the beginning of the semester. There
+        are those who tediously spend hours sifting through course outlines to
+        write down all possible due dates, and there are those who go with the
+        flow and don't glance at them. In one case you lose time, and in the
+        other you can get caught off guard by an alarmingly close due date.
+        Well, this is where <strong>Save The Date</strong> plays superhero. All
+        the user has to do is drop their course outline pdf into the box, and a
+        preview of all due dates will appear. However, the greatness doesn't
+        stop here. <strong>Save The Date</strong>
+        downloads all due dates directly into the user's calendar, making it so
+        you never have to open that pesky course outline ever again.
+      </p>
+    </div>
+    <script>
+      let NoTreeorBush = document.getElementById("NoTreeorBush");
+      let Tree = document.getElementById("Tree");
+      let clouds = document.getElementById("clouds");
+      let text = document.getElementById("text");
+      let btn = document.getElementById("btn");
+      let bush = document.getElementById("bush");
+      let header = document.querySelector("header");
+
+      window.addEventListener("scroll", function () {
+        let value = window.scrollY;
+        clouds.style.left = value * 4.3 + "px";
+        text.style.bottom = value * 2 + "px";
+        btn.style.marginRight = value * 2 + "px";
+        header.style.top = value * 0.5 + "px";
+      });
+    </script>
   </body>
 </html>
