Intermediate Front End Commit

--- a/Contact.html
+++ b/Contact.html
@@ -20,16 +20,17 @@
   </head>
   <body>
     <header>
-      <a href="index.html" class="logo"> S.T.D</a>
+      <a href="index.html" class="logo"> S.T.D.</a>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="index.html#sec">About</a></li>
-        <li><a href="#">Upload</a></li>
+        <li><a href="Dropbox.html">Upload</a></li>
         <li><a href="Contact.html" class="active">Contacts</a></li>
       </ul>
     </header>
     <section>
       <img src="Images/contactbackground.jpg" id="contactbackground" />
+      <!-- Photo Reference: "https://www.freepik.com/vectors/background">Background vector created by pikisuperstar - www.freepik.com</a>-->
       <h2 id="text">Contacts</h2>
     </section>
     <div class="container" id="container">
