--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
   </head>
   <body>
     <header>
-      <a href="#" class="logo"> S.T.D</a>
+      <a href="#" class="logo"> S.T.D.</a>
       <ul>
         <li><a href="#" class="active">Home</a></li>
         <li><a href="#sec">About</a></li>
-        <li><a href="#">Upload</a></li>
+        <li><a href="Dropbox.html">Upload</a></li>
         <li><a href="Contact.html">Contacts</a></li>
       </ul>
     </header>
@@ -38,7 +38,8 @@
       <img src="Images/cloudtrial7.png" id="clouds2" />
       <img src="Images/ground.png" id="ground" />
       <h2 id="text">Save the Date</h2>
-      <a href="#" id="btn"> Upload PDF</a>
+      <a href="Dropbox.html" id="btn"> Upload PDF</a>
+      <!--<a href="https://www.freepik.com/vectors/background">Background vector created by pikisuperstar - www.freepik.com</a>-->
     </section>
     <div class="sec" id="sec">
       <h2>Save The Date</h2>
