Submit Button Added

--- a/Dropbox.html
+++ b/Dropbox.html
@@ -37,7 +37,7 @@
       <span class="drop-zone__prompt">Drop file here or click to upload</span>
       <input type="file" name="myFile" id="myFile" class="drop-zone__input" />
     </div>
-    <input type="submit" value="Upload file" />
+    <input type="submit" value="Submit file" class="submitbutton" />
   </form>
 
   <script src="Dropbox.js"></script>
