New logo + fixed bugs

--- a/Contact.html
+++ b/Contact.html
@@ -20,7 +20,8 @@
   </head>
   <body>
     <header>
-      <a href="index.html" class="logo"> S.T.D.</a>
+      <!-- <a href="index.html" class="logo"> S.T.D.</a> -->
+      <img src="Images/STD logo.png" id="logo" height="100px" class="logo" />
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="index.html#sec">About</a></li>
@@ -30,7 +31,7 @@
     </header>
     <section>
       <img src="Images/contactbackground.jpg" id="contactbackground" />
-      <!-- Photo Reference: "https://www.freepik.com/vectors/background">Background vector created by pikisuperstar - www.freepik.com</a>-->
+
       <h2 id="text">Contacts</h2>
     </section>
     <div class="container" id="container">
