--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
   </head>
   <body>
     <header>
-      <a href="#" class="logo"> S.T.D.</a>
+      <!--<a href="#" class="logo"> S.T.D.</a> -->
+      <img src="Images/STD logo.png" id="logo" height="100px" class="logo" />
       <ul>
         <li><a href="#" class="active">Home</a></li>
         <li><a href="#sec">About</a></li>
