--- a/Dropbox.html
+++ b/Dropbox.html
@@ -20,7 +20,8 @@
 
 <body>
   <header>
-    <a href="index.html" class="logo"> S.T.D.</a>
+    <!-- <a href="index.html" class="logo"> S.T.D.</a> -->
+    <img src="Images/STD logo.png" id="logo" height="100px" class="logo" />
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="index.html#sec">About</a></li>
