--- a/source/public/Dropbox.html
+++ b/source/public/Dropbox.html
@@ -33,7 +33,7 @@
     <img src="Images/contactbackground.jpg" id="uploadbackground" />
     <!-- Photo Reference: "https://www.freepik.com/vectors/background">Background vector created by pikisuperstar - www.freepik.com</a>-->
   </section>
-  <form target="_blank" action="https://www.google.com/" method="POST" enctype="multipart/form-data">
+  <form target="_blank" action="/upload" method="POST" enctype="multipart/form-data">
     <div class="drop-zone">
       <span class="drop-zone__prompt">Drop file here or click to upload</span>
       <input type="file" name="avatar" id="myFile" class="drop-zone__input" />
